--- a/sapphire/sapphire/blog/templates/bbase.html
+++ b/sapphire/sapphire/blog/templates/bbase.html
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head> <title>{% block title %}MyBlog{% endblock %}</title> </head>
+<!DOCTYPE html>
+<html>
+<head> <title>{% block title %}Sapphire Blog{% endblock %}</title> </head>
 
 <body>
     <div id="sidebar"> {% block sidebar %} {% endblock %} </div>
@@ -11,7 +10,7 @@
             {% block nav-global %}
 
                 <!-- MENU -->
-                <h3>MyBlog</h3>
+                <h3>Sapphire Blog</h3>
                 {% if user.is_staff %}
 		<a href="{% url 'admin:index' %}">Admin</a>
                 <a href="{% url 'admin:blog_post_add' %}">Add post</a>
