--- a/sapphire/sapphire/blog/templates/list.html
+++ b/sapphire/sapphire/blog/templates/list.html
@@ -5,11 +5,11 @@
 
         <!-- Posts  -->
         <ul>
-            {% for post in object_list %}
+            {% for post in posts %}
                 <div class="title">{{ post.title }}</div>
                 <ul>
-                    <div class="time">{{ post.created }}</div>
-                    <div class="body">{{ post.body|linebreaks }}</div>
+                    <div class="time">{{ post.creation_date }}</div>
+                    <div class="body">{{ post.content|linebreaks }}</div>
                 </ul>
             {% endfor %}
         </ul>
