--- a/sapphire/sapphire/blog/templates/bbase.html
+++ b/sapphire/sapphire/blog/templates/bbase.html
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <html>
-<head> <title>{% block title %}Sapphire Blog{% endblock %}</title> </head>
+<head> <title>{% block title %}Sapphire Blog{% endblock %}</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<meta name="description" content="homepage">
+<meta name="author" content="Alexandre Lafaye">
+<link rel="shortcut icon" href="../favicon/favicon.ico" type="image/x-icon">
+<link rel="icon" href="../favicon/favicon.ico">
+</head>
 
 <body>
     <div id="sidebar"> {% block sidebar %} {% endblock %} </div>
@@ -23,6 +31,7 @@
             {% block content %}{% endblock %}
         </div>
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
